platform/base/cybercrime-api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybercrime-api
spec: {}
status: {}
