platform/base/cybercrime-frontend-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybercrime-frontend
spec: {}
status: {}
