platform/base/baseline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cybercrime-api
  labels:
    app: baseline
  name: baseline
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baseline
  strategy: {}
  template:
    metadata:
      labels:
        app: baseline
    spec:
      containers:
      - image: gcr.io/report-a-cybercrime-alpha/baseline
        name: baseline
        resources: {}
status: {}
