platform/base/cybercrime-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cybercrime-api
  labels:
    app: cybercrime-api
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.cybercrime-api: glob:master-*
  name: cybercrime-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cybercrime-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cybercrime-api
    spec:
      containers:
        - image: acrrcmpcybercrime.azurecr.io/api:latest
          imagePullPolicy: Always
          name: cybercrime-api
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: acr-auth
status: {}
