platform/base/cybercrime-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cybercrime-frontend
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.cybercrime-frontend: glob:master-*
  name: cybercrime-frontend
  namespace: cybercrime-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cybercrime-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cybercrime-frontend
    spec:
      containers:
        - image: acrrcmpcybercrime.azurecr.io/frontend
          imagePullPolicy: Always
          name: cybercrime-frontend
          resources: {}
          livenessProbe:
            httpGet:
              path: /monitoring/alive
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /monitoring/ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: acr-auth
status: {}
