platform/base/cybercrime-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybercrime-frontend
  namespace: cybercrime-frontend
spec:
  ports:
    - name: frontend-port
      port: 3000
      targetPort: 3000
  selector:
    app: cybercrime-frontend
  type: ClusterIP
status:
  loadBalancer: {}
